src/main/resources/styles.css
/*
  Copyright 2020 Máté Lajkó

  This file is part of PunCAT.

  PunCAT is free software: you can redistribute it and/or modify it
  under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  PunCAT is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with PunCAT.  If not, see <https://www.gnu.org/licenses/>.
 */

.root {
    -fx-font-size: 12;
}

.menu-bar {
    -fx-background-color: white;
}

.sense-tab-pane .tab-header-area .tab-header-background {
    -fx-opacity: 0;
}

.button:focused {
    -fx-background-color: -fx-outer-border, -fx-inner-border, -fx-body-color;
    -fx-background-insets: 0, 1, 2;
    -fx-background-radius: 5, 4, 3;
}

.table-row-cell:filled:selected {
    -fx-background: -fx-control-inner-background;
    -fx-background-color: -fx-table-cell-border-color, -fx-background;
    -fx-background-insets: 0, 0 0 1 0;
    -fx-table-cell-border-color: derive(-fx-color, 5%);
}

.table-row-cell:odd:filled:selected {
    -fx-background: -fx-control-inner-background-alt;
}

.scroll-pane > .viewport {
    -fx-background-color: transparent;
}

.invalid-input {
    -fx-focus-color: #d35244;
    -fx-faint-focus-color: #d3524422;

    -fx-highlight-fill: -fx-accent;
    -fx-highlight-text-fill: white;
    /*
        The problematic line is straight from the official JavaFX CSS file (modena.css).
        The style looks as expected. Let's not disturb it.
     */
    /*noinspection CssInvalidFunction*/
    -fx-background-color: -fx-focus-color,
    -fx-control-inner-background,
    -fx-faint-focus-color,
    linear-gradient(from 0px 0px to 0px 5px, derive(-fx-control-inner-background, -9%), -fx-control-inner-background);
    -fx-background-insets: -0.2, 1, -1.4, 3;
    -fx-background-radius: 3, 2, 4, 0;
    -fx-prompt-text-fill: transparent;
}

